--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.thoughtworks.car</groupId>
     <artifactId>car-auction</artifactId>
+    <packaging>war</packaging>
+    <name>book-shelf</name>
+    <url>http://maven.apache.org</url>
     <version>1.0-SNAPSHOT</version>
+
     <properties>
         <spring.version>4.2.5.RELEASE</spring.version>
     </properties>
@@ -70,6 +74,20 @@
                         <httpConnector>
                             <port>8080</port>
                         </httpConnector>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.heroku.sdk</groupId>
+                    <artifactId>heroku-maven-plugin</artifactId>
+                    <version>1.1.1</version>
+
+                    <configuration>
+                        <appName>carsonauction</appName>
+
+                        <processTypes>
+                            <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+                        </processTypes>
                     </configuration>
                 </plugin>
 
