--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.thoughtworks.car</groupId>
     <artifactId>car-auction</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <name>book-shelf</name>
     <url>http://maven.apache.org</url>
     <version>1.0-SNAPSHOT</version>
@@ -78,17 +78,25 @@
                 </plugin>
 
                 <plugin>
-                    <groupId>com.heroku.sdk</groupId>
-                    <artifactId>heroku-maven-plugin</artifactId>
-                    <version>1.1.1</version>
-
-                    <configuration>
-                        <appName>carsonauction</appName>
-
-                        <processTypes>
-                            <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
-                        </processTypes>
-                    </configuration>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.3</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals><goal>copy</goal></goals>
+                            <configuration>
+                                <artifactItems>
+                                    <artifactItem>
+                                        <groupId>org.eclipse.jetty</groupId>
+                                        <artifactId>jetty-runner</artifactId>
+                                        <version>9.3.3.v20150827</version>
+                                        <destFileName>jetty-runner.jar</destFileName>
+                                    </artifactItem>
+                                </artifactItems>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
 
             </plugins>
