--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>javax.servlet.jsp-api</artifactId>
             <version>2.3.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.jsimone</groupId>
+            <artifactId>webapp-runner</artifactId>
+            <version>8.0.30.1</version>
+        </dependency>
     </dependencies>
 
 
@@ -76,7 +82,6 @@
                         </httpConnector>
                     </configuration>
                 </plugin>
-
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
@@ -88,10 +93,10 @@
                             <configuration>
                                 <artifactItems>
                                     <artifactItem>
-                                        <groupId>org.eclipse.jetty</groupId>
-                                        <artifactId>jetty-runner</artifactId>
-                                        <version>9.3.3.v20150827</version>
-                                        <destFileName>jetty-runner.jar</destFileName>
+                                        <groupId>com.thoughtworks.car</groupId>
+                                        <artifactId>car-auction</artifactId>
+                                        <version>1.0</version>
+                                        <destFileName>webapp-runner.jar</destFileName>
                                     </artifactItem>
                                 </artifactItems>
                             </configuration>
