--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.thoughtworks.car</groupId>
     <artifactId>car-auction</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>book-shelf</name>
     <url>http://maven.apache.org</url>
     <version>1.0-SNAPSHOT</version>
@@ -83,6 +83,8 @@
                     </configuration>
                 </plugin>
 
+
+                <!-- webapp: this file will be used by heroku to run the project-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
