--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>4.2.5.RELEASE</spring.version>
     </properties>
 
@@ -46,11 +47,11 @@
             <version>2.3.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.github.jsimone</groupId>
-            <artifactId>webapp-runner</artifactId>
-            <version>8.0.30.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.github.jsimone</groupId>-->
+            <!--<artifactId>webapp-runner</artifactId>-->
+            <!--<version>8.0.30.1</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
