--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.thoughtworks.car</groupId>
+    <groupId>com.thoughtworks.carauction</groupId>
     <artifactId>car-auction</artifactId>
-    <packaging>war</packaging>
-
-    <url>http://maven.apache.org</url>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.0.3</kotlin.version>
         <spring.version>4.2.5.RELEASE</spring.version>
         <hibernate.version>5.1.0.Final</hibernate.version>
     </properties>
@@ -33,18 +27,10 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -58,24 +44,37 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.jsimone</groupId>
-            <artifactId>webapp-runner</artifactId>
-            <version>8.0.30.1</version>
-        </dependency>
-
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
-            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
         </dependency>
 
         <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
-            <version>${kotlin.version}</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>com.github.jsimone</groupId>-->
+            <!--<artifactId>webapp-runner</artifactId>-->
+            <!--<version>8.0.30.1</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 
@@ -108,7 +107,6 @@
                     </configuration>
                 </plugin>
 
-
                 <!-- webapp: this file will be used by heroku to run the project-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -117,7 +115,9 @@
                     <executions>
                         <execution>
                             <phase>package</phase>
-                            <goals><goal>copy</goal></goals>
+                            <goals>
+                                <goal>copy</goal>
+                            </goals>
                             <configuration>
                                 <artifactItems>
                                     <artifactItem>
@@ -131,9 +131,8 @@
                         </execution>
                     </executions>
                 </plugin>
+
             </plugins>
-
-
         </pluginManagement>
     </build>
 </project>
